@@ -1,0 +1,23 @@
+.panel#summary
+  / .caption Billing Address
+  %h4= @account.name
+  - if @account.website
+    %div
+      %b= link_to(@account.website.shorten(30), @account.website, :popup => true, :title => "Open #{@account.website} in a new window")
+  %div
+    - if @account.tall_free_phone
+      == Tall free: <b>#{@account.tall_free_phone}</b><br />
+
+    - if @account.phone
+      == Phone: <b>#{@account.phone}</b><br />
+
+    - if @account.fax
+      == Fax: <b>#{@account.fax}</b><br />
+
+  - if @account.billing_address
+    %b Billing Address
+    %div= @account.billing_address.n2br
+
+  - if 1 || @account.shipping_address && (@account.shipping_address != @account.billing_address)
+    %b Shipping Address
+    %div= @account.shipping_address.n2br
