@@ -57,10 +57,10 @@ contact_<%= i %>:
   phone       : <%= Faker::PhoneNumber.phone_number if rand(10) < 8 %>
   mobile      : <%= Faker::PhoneNumber.phone_number if rand(10) < 6 %>
   fax         : <%= Faker::PhoneNumber.phone_number if rand(10) < 4 %>
-  blog        : <%= "http://#{(first_name + last_name.first).downcase}.blogger.com" if rand(10) < 5 %>
-  linkedin    : <%= "http://www.linkedin.com/#{(first_name + last_name.first).downcase}" if rand(10) < 4 %>
-  facebook    : <%= "http://www.facebook.com/#{(first_name + last_name.first).downcase}" if rand(10) < 5 %>
-  twitter     : <%= "http://www.twitter.com/#{(first_name + last_name.first).downcase}" if rand(10) < 3 %>
+  blog        : <%= "http://#{(first_name + last_name.first).downcase}.blogger.com" if rand(10) < 8 %>
+  linkedin    : <%= "http://www.linkedin.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
+  facebook    : <%= "http://www.facebook.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
+  twitter     : <%= "http://www.twitter.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
   address     : |
                 <%= Faker::Address.street_address + " " + Faker::Address.secondary_address %>
                 <%= Faker::Address.city + ", " + Faker::Address.us_state_abbr + " " + Faker::Address.zip_code %>
