@@ -57,10 +57,10 @@ lead<%= i %>:
   status      : <%= status[rand(status.size)] %>
   rating      : <%= rand(5) %>
   referred_by : <%= Faker::Name.first_name + " " + Faker::Name.last_name if rand(10) < 5 %>
-  blog        : <%= "http://#{(first_name + last_name.first).downcase}.blogger.com" if rand(10) < 5 %>
-  linkedin    : <%= "http://www.linkedin.com/#{(first_name + last_name.first).downcase}" if rand(10) < 4 %>
-  facebook    : <%= "http://www.facebook.com/#{(first_name + last_name.first).downcase}" if rand(10) < 5 %>
-  twitter     : <%= "http://www.twitter.com/#{(first_name + last_name.first).downcase}" if rand(10) < 3 %>
+  blog        : <%= "http://#{(first_name + last_name.first).downcase}.blogger.com" if rand(10) < 8 %>
+  linkedin    : <%= "http://www.linkedin.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
+  facebook    : <%= "http://www.facebook.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
+  twitter     : <%= "http://www.twitter.com/#{(first_name + last_name.first).downcase}" if rand(10) < 8 %>
   email       : <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name}#{last_name.first}@".downcase) %>
   alt_email   : <%= Faker::Internet.free_email.sub(/^.+?@/, "#{first_name}#{rand(9999)}@".downcase) if rand(10) < 3 %>
   phone       : <%= Faker::PhoneNumber.phone_number if rand(10) < 5 %>
